# cookiecutter-pyproject

./: README.md  cookiecutter.json
{{cookiecutter.name}}/src/{{ cookiecutter.src }}/: _version.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py
{{cookiecutter.project_name}}/docs/source/: api.rst  conf.py  index.rst  quickstart.rst
{{cookiecutter.project_name}}/src/{{ cookiecutter.project_src }}/: _version.py
{{cookiecutter.project_name}}/tests/: test_simple.py
